@@ -7,6 +7,8 @@
 #include	"rfc2047.h"
 #include	<iostream>
 #include	<iterator>
+#include	<string_view>
+#include	<sstream>
 
 auto tokenize(const char *p)
 {
@@ -44,6 +46,89 @@ rfc822::addresses doaddr(rfc822::tokens &t)
 	std::cout << "\n";
 
 	return addresses;
+}
+
+void rfc2047decode_test()
+{
+	struct teststr {
+		std::string_view input;
+		const char *expected_output;
+	} tests[]={
+		{"", ""},
+		{"=", "[utf-8::=]"},
+		{"==", "[utf-8::==]"},
+		{"==?iso-8859-1*en_US?q?quoted=20printable?=", "[utf-8::=][iso-8859-1:en_US:quoted printable]"},
+		{"=?iso-8859-1*?q?qp1?==", "[iso-8859-1::qp1][utf-8::=]"},
+		{"=?iso-8859-1?q?qp2?===?iso-8859-1*en?q?qp3?===", "[iso-8859-1::qp2][utf-8::=][iso-8859-1:en:qp3][utf-8::==]"},
+		{"=?iso-8859-1?q?a?= =?iso-8859-1?q?b?=", "[iso-8859-1::a][iso-8859-1::b]"},
+		{"=?iso-8859-1?q?q=6A?=   =?iso-8859-1*en?q?=6a?=", "[iso-8859-1::qj][iso-8859-1:en:j]"},
+		{"=?iso-8859-1?b?MTIz?=", "[iso-8859-1::123]"},
+		{"=?iso-8859-1?b?MTI=?=", "[iso-8859-1::12]"},
+		{"=?iso-8859-1?b?MQ==?=", "[iso-8859-1::1]"},
+		{"=?iso-8859-1?b?M===?=", "[iso-8859-1::6]"},
+		{"=?", ":error"},
+		{"=?iso-8859-1?x12", "[utf-8::12]:error"},
+		{"=?iso-8859-1?q", ":error"},
+		{"=?iso-8859-1?qr", "[utf-8::r]:error"},
+		{"=?iso-8859-1?q?r?", "[iso-8859-1::r]:error"},
+		{"=?iso-8859-1?q?r?st", "[iso-8859-1::r?st]:error"},
+		{"=?iso-8859-1?q?=", "[iso-8859-1::]:error"},
+		{"=?iso-8859-1?q?=a", "[iso-8859-1::]:error"},
+		{"=?iso-8859-1?q?=2", "[iso-8859-1::]:error"},
+		{"=?iso-8859-1?q?=2x", "[iso-8859-1::][utf-8::x]:error"},
+		{"=?iso-8859-1?b?MTIz?", "[iso-8859-1::123]:error"},
+		{"=?iso-8859-1?b?MTI=?", "[iso-8859-1::12]:error"},
+		{"=?iso-8859-1?b?MQ==?", "[iso-8859-1::1]:error"},
+		{"=?iso-8859-1?b?M===?", "[iso-8859-1::6]:error"},
+		{"=?iso-8859-1?b?MTIz", "[iso-8859-1::123]:error"},
+		{"=?iso-8859-1?b?MTI=", "[iso-8859-1::12]:error"},
+		{"=?iso-8859-1?b?MQ==", "[iso-8859-1::1]:error"},
+		{"=?iso-8859-1?b?M===", "[iso-8859-1::6]:error"},
+	};
+
+	for (auto &t:tests)
+	{
+		std::ostringstream o;
+
+		bool errflag=false;
+
+		rfc2047::decode(
+			t.input.begin(),
+			t.input.end(),
+			[&]
+			(auto &charset,
+			 auto &language, auto cb)
+			{
+				o << "[" << charset
+				  << ":" << language
+				  << ":";
+
+				std::ostreambuf_iterator<char> iter{o};
+				cb(iter);
+				o << "]";
+			},
+			[&]
+			(std::string_view::iterator &b,
+			 std::string_view::iterator &e,
+			 std::string_view error)
+			{
+				errflag=true;
+			});
+		if (errflag)
+			o << ":error";
+
+		// std::cout << "{\"" << t.input << "\", \""
+		//	  << o.str() << "\"},\n";
+
+		if (o.str() != t.expected_output)
+		{
+			std::cout << "rfc2047_decode error: "
+				  << t.input
+				  << "\n    expected: " << t.expected_output
+				  << "\n    result:   " << o.str()
+				  << "\n";
+		}
+	}
 }
 
 int main()
@@ -99,4 +184,6 @@ int main()
 
 	std::cout << rfc2047::encode(FIVEMAX "\xcc\x80", "utf-8",
 				     rfc2047_qp_allow_any).first << "\n";
+
+	rfc2047decode_test();
 }
