@@ -1,3 +1,8 @@
+2025-05-02  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Implement C++ API for RFC 822 tokenization, address parsing,
+	and RFC-2047 encoding and decoding (partial).
+
 2023-11-17  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* rfc822: use tm_gmtoff in preference over daylight, for determining
